--- a/style.css
+++ b/style.css
@@ -1,53 +1,111 @@
 body {
-	background: #efeee7;
-	margin: 0;
-	padding: 0;
-	font-family: "Georia", "Times New Roman",
-		Times, serif;
+	background: #777;
+	font-family: "Arial", "Helvetica Neue",
+		Helvetica, sans-serif;
+	color: #777;
 	font-size: 18px;
-	line-height: 150%;
+	width: 960px;
 
 }
 
-h1 { 
-	color: #efeee7;
-	background: #333333;
-	margin: 0;
+div {
+
+}
+
+#main { 
+	background: #ebebeb;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 30px;
+	margin-right: 30px;
 	text-align: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	font-size: 28px;
+	padding: 40px;
+	width: 495px
 }
 
-h2 {
-	font-size:24px;
+
+#section {
+	background: #ebebeb;
+	width: 36.5%;
+	height: 300px;
+	margin-left: 30px;
+	margin-bottom: 15px;
+	margin-top: 15px;
+	background: #ebebeb;
+	float:left;
+	text-align: center;
+	line-height: 60px;
+
+
 }
 
-a {
-	color: #d21034;
+
+#aside {
+	width: 22%;
+	height: 300px;
+	margin-left: 15px;
+	margin-top:15px;
+	margin-bottom: 15px;
+	background: #ebebeb;
+	float:left;
+	text-align: center;
+	line-height: 60px;
 }
 
-.container {
-	width: 1024px;
-	margin: 0 auto;
-}
-
-#main-bio,
-#contact-info,
-#bio-image {
-	float: left;
-}
-
-#main-bio {
-	width: 70%;
-}
-
-#contact-info {
-	width: 30%;
-}
-
-#bio-image {
+#article{
+	background: #777;
+	color: white;
+	margin: 15px;
+	text-align: center;
+	line-height: 40px;
 	height: 200px;
-	width: 200px;
-	padding-right: 25px;
+	width: 24.5%;
+	float: left;
+	position: absolute;
+	top: 300px;
+	left: 35px;
 }
+
+#h1-h2-h3{
+	background: #ebebeb;
+	text-align: center;
+	line-height: 40px;
+	width: 23.5%;
+	height: 65px;
+	margin:5px;
+	float: left;
+	position: absolute;
+	top: 350px;
+	left: 48px;
+
+}
+
+#p {
+	background: #ebebeb;
+	text-align: center;
+	line-height: 40px;
+	width: 23.5%;
+	height: 65px;
+	margin: 5px;
+	float: left;
+	position: absolute;
+	top: 420px;
+	left: 48px;
+}
+
+#footer{
+
+	background: #ebebeb;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 30px;
+	margin-right: 30px;
+	text-align: center;
+	padding: 40px;
+	width: 495px;
+	clear:both;
+	display: absolute;
+	top: 500px;
+	left: 35px;
+
+
